# rviz_polygon_selection_tool

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin_description.xml
.github/workflows/: clang_format.yml  cmake_format.yml  main.yml  ubuntu.yml
cmake/: macros.cmake
msg/: Selection.msg
src/: circle_polygon_selection_tool.cpp  circle_polygon_selection_tool.h  mesh_polygon_selection_tool.cpp  mesh_polygon_selection_tool.h  rviz_polygon_selection_tool.cpp  rviz_polygon_selection_tool.h  version_check.hpp
srv/: GetSelection.srv
